--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Devobo</title>
+		<title>devobo</title>
 		<meta name="description" content="Devobo">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
