--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>devobo</title>
+		<link rel="icon" type="image/ico" href="assets/ico.png" />
 		<meta name="description" content="Devobo">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
