--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 	<body>
 		<div class="container">
 			<div class="center">
-				<img src="assets/logo.png" alt="Devobo">
+				<img src="assets/logo.png" alt="Devobo"> <br \>
+				<img src="assets/LOGO_hiventures-14.jpg" alt="Devobo">
 			</div>
 		</div>
 	</body>
