--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="center">
-				<img src="assets/logo.png" alt="Devobo"> <br \>
+			<div>
+				<img src="assets/logo.png" alt="Devobo"> 
+			</div>
+			<div>
 				<img src="assets/LOGO_hiventures-14.jpg" alt="Devobo">
 			</div>
 		</div>
