--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 				<img src="assets/logo.png" alt="Devobo"> 
 			</div>
 			<div>
-				<img src="assets/LOGO_hiventures-14.jpg" alt="Devobo">
+				<img src="assets/LOGO_hiventures-14.jpg" alt="Hiventures">
+			</div>
+			<div>
+				<img src="assets/EUblokk.png" alt="EU">
 			</div>
 		</div>
 	</body>
