--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	</head>
 	<body>
 		<div class="container">
-			<div>
+			<div align="center">
 				<img src="assets/logo.png" alt="Devobo"> 
 			</div>
-			<div>
-				<img src="assets/LOGO_hiventures-14.jpg" alt="Hiventures">
+			<div align="center">
+				<img width="50%" src="assets/LOGO_hiventures-14.jpg" alt="Hiventures">
 			</div>
-			<div>
+			<div align="right">
 				<img src="assets/EUblokk.png" alt="EU">
 			</div>
 		</div>
