--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		
+		<div align="center">
+			<img src="assets/logo.png" alt="Devobo"> 
+		</div>
+		<div align="center">
+			<img width="50%" src="assets/LOGO_hiventures-14.jpg" alt="Hiventures">
+		</div>
 		<div class="container">
-			<div align="center">
-				<img src="assets/logo.png" alt="Devobo"> 
-			</div>
-			<div align="center">
-				<img width="50%" src="assets/LOGO_hiventures-14.jpg" alt="Hiventures">
-			</div>
-			<div align="right">
+			<div class="container">
 				<img src="assets/EUblokk.png" alt="EU">
 			</div>
 		</div>
