--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			</div>
 		</div>
 		<div>
-			<img width="50%" src="assets/LOGO_hiventures-14.jpg" alt="Hiventures">
-			<img src="assets/EUblokk.png" alt="EU">
+			<img width="50%" align="left" src="assets/LOGO_hiventures-14.jpg" alt="Hiventures">
+			<img align="right" src="assets/EUblokk.png" alt="EU">
 		</div>
 	</body>
 </html>
