--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 	<body>
 		<div class="container">
 			<div class="center">
-				<img src="assets/logo.png" alt="Devobo"> 
+				<img src="assets/logo.png" width="100%" alt="Devobo"> 
 			</div>
 		</div>
-		<div>
-			<img width="50%" align="left" src="assets/LOGO_hiventures-14.jpg" alt="Hiventures">
-			<img align="right" src="assets/EUblokk.png" alt="EU">
+		<div class="container-bottom">
+			<table style="width:100%; height:100%;">
+				<tr >
+					<td valign="bottom" align="left"> <img width="25%"  src="assets/LOGO_hiventures-14.jpg" alt="Hiventures"></td>
+					<td valign="bottom" align="right"> <img width="60%"  src="assets/EUblokk.png" alt="EU"></td>
+				</tr>
 		</div>
 	</body>
 </html>
