--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<td valign="bottom" align="left"> <img width="25%"  src="assets/LOGO_hiventures-14.jpg" alt="Hiventures"></td>
 					<td valign="bottom" align="right"> <img width="60%"  src="assets/EUblokk.png" alt="EU"></td>
 				</tr>
+			</table>
 		</div>
 	</body>
 </html>
