--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 		<link rel="icon" type="image/ico" href="assets/ico.png" />
 		<meta name="description" content="Devobo">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="google-site-verification" content="H2bwMy5CgvRr8x-EAmaBNhqMvqOQ0BWlbsigm7Iky4U" />
 		
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/style.css">
+		
+		
 	</head>
 	<body>
 		<div class="container">
